# factchecker_agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_adk_web.py  start_adk_web.bat
fact_checker_agent/: __init__.py  agent.py  config.py  tools.py
fact_checker_agent/sub_agents/: __init__.py  claim_analysis_agent.py  claim_check_agent.py  claim_research_agent.py  claim_text_extractor_agent.py  source_reliability_agent.py
